--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav> 
+	<ul>
+		<li><a href="http://www.google.com/"> Home</a></li>
+		<li><a href="http://www.google.com/"> About us</a></li>
+		<li><a href="http://www.google.com/"> Contact us</a></li>
+	</ul>
+		
+	</nav>
+	<h1> 3 random Audios</h1>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" Controls></audio>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" Controls></audio>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" Controls></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
