--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav> 
 	<ul>
-		<li><a href="http://www.google.com/"> Home</a></li>
-		<li><a href="http://www.google.com/"> About us</a></li>
-		<li><a href="http://www.google.com/"> Contact us</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="/about/">About</a></li>
+		<li><a href="/blog/">Blog</a></li>
 	</ul>
 		
 	</nav>
