--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<nav> 
 	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="/about/">About</a></li>
-		<li><a href="/blog/">Blog</a></li>
+		<li><a href="https://www.google.com">Home</a></li>
+		<li><a href="https://www.google.com">About</a></li>
+		<li><a href="https://www.google.com">Contct</a></li>
 	</ul>
 		
 	</nav>
-	<h1> 3 random Audios</h1>
-	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" Controls></audio>
-	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" Controls></audio>
-	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" Controls></audio>
+	<h1> 3 random audios</h1>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" Controls></audio>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" Controls></audio>
+	<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" Controls></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
